--- a/start.ipynb
+++ b/start.ipynb
@@ -23,16 +23,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "<ol style=\"color: green\">\n",
-    "  <li>Remove empty lines </li>\n",
-    "  <li>Replace date to year </li>\n",
+    "<h3>data/energy/*.csv -> result/energy/result.csv</h3>\n",
+    "<ol style=\"color: blue\">\n",
+    "  <li>Merge all countries </li>\n",
     "  <li>Remove cells with older than 1990</li>\n",
-    "  <li>Groups by country+year and sum averages for temperatures</li>\n",
+    "  ...\n",
     "</ol>"
    ]
   },
@@ -51,6 +49,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
