--- a/start.ipynb
+++ b/start.ipynb
@@ -39,7 +39,6 @@
     "<ol style=\"color: blue\">\n",
     "  <li>Merge all countries </li>\n",
     "  <li>Remove cells with older than 1990</li>\n",
-    "  ...\n",
     "</ol>"
    ]
   },
@@ -62,8 +61,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>result/temperature/grouped.csv -> temperature_key.csv</h3>\n",
+    "<ol style=\"color: blue\">\n",
+    "  <li>Makes temporary file which: Concates 4(country) And 1(year) columns and makes (key) column: key=\"country\"\"year\"</li>\n",
+    "</ol>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 328,
    "metadata": {
     "scrolled": true
    },
@@ -82,16 +91,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>result/energy/merged.csv -> energy_key.csv</h3>\n",
+    "<ol style=\"color: blue\">\n",
+    "  <li>Makes temporary file which: Concates 2(country) And 3(year) columns and makes (key) column: key=\"country\"\"year\"</li>\n",
+    "</ol>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns: 129\r\n",
-      "Rows: 7292\r\n"
+      "Columns: 129\n",
+      "Rows: 7292\n"
      ]
     }
    ],
@@ -100,29 +119,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>temperature_key.csv  energy_key.csv -> result/temperature_energy_joined.csv</h3>\n",
+    "<ol style=\"color: blue\">\n",
+    "  <li>Join by key column</li>\n",
+    "  <li>Removes key column</li>\n",
+    "</ol>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns: 132\r\n",
-      "Rows: 4460\r\n"
+      "Columns: 132\n",
+      "Rows: 4460\n"
      ]
     }
    ],
    "source": [
     "! mlr --csv join -j key -f temperature_key.csv energy_key.csv | awk -F , 'BEGIN {OFS=FS}  {$1=\"\"; sub(\",\", \"\"); print}' > result/temperature_energy_joined.csv; rm temperature_key.csv energy_key.csv; awk -f com/countColumsRows.awk result/temperature_energy_joined.csv"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
