--- a/start.ipynb
+++ b/start.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -8114,10 +8114,6 @@
       "Taiwan                   2010 -\r",
       "\r\n",
       "Taiwan                   2011 -\r",
-      "\r\n",
-      "Taiwan                   2012 -\r",
-      "\r\n",
-      "Taiwan                   2013 -\r",
       "\r\n"
      ]
     },
@@ -8125,6 +8121,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Taiwan                   2012 -\r",
+      "\r\n",
+      "Taiwan                   2013 -\r",
+      "\r\n",
       "Tajikistan               1992 -\r",
       "\r\n",
       "Tajikistan               1993 -9.662\r",
@@ -9133,7 +9133,7 @@
     }
    ],
    "source": [
-    "!mlr --icsv --ips , --opprint cut -f country,year,coal_prod_change_pct result/temperature_energy_joined.csv"
+    "!mlr --icsv --opprint cut -f country,year,coal_prod_change_pct result/temperature_energy_joined.csv"
    ]
   },
   {
