--- a/start.ipynb
+++ b/start.ipynb
@@ -206,6 +206,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($4 == \"Russia\") print $1, $2}' result/temperature_energy_joined.csv > result/russia_temperature.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"result/russia_temperature.txt\"; fileout=\"visual/image.png\"' visual/settings/settings_initial.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($1 == \"1990\") print $2, $3, $9, $14, $15, $4}' result/temperature_energy_joined.csv > result/temperature_1990.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"result/temperature_1990.txt\"; fileout=\"visual/temperature_1990.png\"' visual/settings/temperature_1990.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($1 == \"2000\") print $2, $3, $9, $14, $15, $4}' result/temperature_energy_joined.csv > result/temperature_2000.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($1 == \"2010\") print $2, $3, $9, $14, $15, $4}' result/temperature_energy_joined.csv > result/temperature_2010.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename1=\"result/temperature_2000.txt\";filename2=\"result/temperature_2010.txt\"; fileout=\"visual/temp_compare_2000vs2010.png\"' visual/settings/compare_temperature_2000vs2010.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($1 == \"1995\") print $2, $3, $9, $14, $15, $4}' result/temperature_energy_joined.csv > result/temperature_1995.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename1=\"result/temperature_2000.txt\";filename2=\"result/temperature_2010.txt\";filename3=\"result/temperature_1990.txt\";filename4=\"result/temperature_1995.txt\"; fileout=\"visual/compare_5_countries.png\"' visual/settings/compare_5_countries.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename1=\"result/temperature_2000.txt\";filename2=\"result/temperature_2010.txt\";filename3=\"result/temperature_1990.txt\";filename4=\"result/temperature_1995.txt\"; fileout=\"visual/barplot.png\"' visual/settings/barplot.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -228,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
