--- a/start.ipynb
+++ b/start.ipynb
@@ -419,23 +419,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 frames in animation sequence\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!gnuplot -p -e 'filename=\"result/coal_cold_countries_2010.txt\"; fileout=\"visual/coal_production_2010.gif\"' visual/settings/giftrying.g"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 162,
    "metadata": {},
    "outputs": [],
@@ -578,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -592,11 +575,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "c74168dd9cafd6b30ae45c595ed80e55cd8150ada6506afbf8fe65a5216363dc"
+    "hash": "a9bddaedf6de2ce975075bc226d99e1c6c3db53703373ffb150042d854641e3d"
    }
   }
  },
