--- a/start.ipynb
+++ b/start.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>data/temperature/*.csv -> result/temperature/result.csv</h3>\n",
+    "<h3>data/temperature/*.csv -> result/temperature/grouped.csv</h3>\n",
     "<ol style=\"color: blue\">\n",
     "  <li>Remove empty lines </li>\n",
     "  <li>Replace date to year </li>\n",
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>data/energy/*.csv -> result/energy/result.csv</h3>\n",
+    "<h3>data/energy/*.csv -> result/energy/merged.csv</h3>\n",
     "<ol style=\"color: blue\">\n",
     "  <li>Merge all countries </li>\n",
     "  <li>Remove cells with older than 1990</li>\n",
