--- a/visual.ipynb
+++ b/visual.ipynb
@@ -357,6 +357,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"stats/1990/clean/1990_coal_prod_clean.csv\"; fileout=\"visual/visual_2013_1990/1990_coal_prod.png\"; mytitle=\"Coal production for all countries in 1990\"; productname=\"coal\"; color=2' visual/settings_2013_1990/production.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"stats/2013/clean/2013_coal_prod_clean.csv\"; fileout=\"visual/visual_2013_1990/2013_coal_prod.png\"; mytitle=\"Coal production for all countries in 2013\"; productname=\"coal\"; color=5' visual/settings_2013_1990/production.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"stats/1990/clean/1990_coal_prod_clean.csv\"; fileout=\"visual/visual_2013_1990/1990_coal_prod.png\"; mytitle=\"Coal production for all countries in 1990\"; productname=\"coal\"; color=2' visual/settings_2013_1990/production.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename1=\"stats/1990/clean_top5/1990_coal_prod_top5.csv\";filename2=\"stats/1990/clean_top5/1990_oil_prod_top5.csv\"; filename3=\"stats/1990/clean_top5/1990_gas_prod_top5.csv\"; filename4=\"stats/2013/clean_top5/2013_coal_prod_top5.csv\"; filename5=\"stats/2013/clean_top5/2013_oil_prod_top5.csv\"; filename6=\"stats/2013/clean_top5/2013_gas_prod_top5.csv\"; fileout=\"visual/visual_2013_1990/compare.png\"' visual/settings_2013_1990/multi_production.g"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
