--- a/visual.ipynb
+++ b/visual.ipynb
@@ -393,6 +393,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!awk -F, 'OFS=\" \"{if ($4 == \"Azerbaijan\" && $1 >=\"2000\") print $1, $31, $99, $65, $47}' result/temperature_energy_joined.csv > result/greenhouse.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename=\"stats/2013/greenhouse/2013_greenhouse_gas_emissions_top5.csv\"; filename2=\"result/greenhouse.txt\"; fileout=\"visual/visual_2013_1990/greenhouse.png\"' visual/settings_2013_1990/greenhouse.g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gnuplot -p -e 'filename1=\"stats/2013/clean_top5/2013_hydro_consumption_top5.csv\";filename2=\"stats/2013/clean_top5/2013_solar_consumption_top5.csv\"; filename3=\"stats/2013/clean_top5/2013_wind_consumption_top5.csv\"; fileout=\"visual/visual_2013_1990/2013_hydro_solar_wind.png\"' visual/settings_2013_1990/2013.g"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
